# AegisFlow

./: README.md  docker-compose.yml  pyproject.toml
.aegisflow/: simulation_state.json
infra/temporal/dynamicconfig/: development-sql.yaml
src/aegisflow/: __init__.py  simulation_runner.py  telemetry.py  worker.py
src/aegisflow/agents/: __init__.py  deps.py  incident_agents.py
src/aegisflow/models/: __init__.py  alert_payload.py  diagnosis.py  enums.py  mitigation.py
src/aegisflow/simulation/: __init__.py  control.py
src/aegisflow/workflows/: __init__.py  activities.py  constants.py  incident_workflow.py  workflow_models.py
tests/: test_advanced_patterns.py  test_agents.py  test_simulation.py  test_workflows.py
